2007-12-23  Zoltan Varga  <vargaz@gmail.com>

	* mini-trampolines.c (mono_delegate_trampoline): Use mono_get_delegate_invoke ().

	* aot-compiler.c (emit_klass_info): Avoid emitting info if one of the methods
	in the vtable can't be encoded.
	(compile_method): Ditto.

2007-12-21  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (setup_jit_tls_data): Use the MONO_ARCH_INIT_TOP_LMF_ENTRY macro if
	defined.

	* mini-amd64.h mini-amd64.c exceptions-amd64.c tramp-amd64.c: Rename lmf->ebp to 
	lmf->rbp.

	* exceptions-amd64.c (mono_arch_find_jit_info): Fix the detection of whenever
	the top LMF entry belongs to the current method.

	* mini.c: Update after renaming of mono_thread_get_pending_exception ().

2007-12-20  Zoltan Varga  <vargaz@gmail.com>

	* tramp-ia64.c (mono_arch_create_trampoline_code): Fix a warning.
	
	* tramp-ia64.c (mono_arch_create_trampoline_code): Ditto.

	* tramp-sparc.c (mono_arch_create_trampoline_code): Check for thread interruption.

	* tramp-amd64.c (mono_arch_create_trampoline_code): Ditto.

	* tramp-x86.c (mono_arch_create_trampoline_code): Check for thread interruption.

	* cpu-amd64.md mini-amd64.h mini-amd64.c inssel-amd64.brg: Add ulong->double 
	implementation.

	* basic-float.cs: Add an ulong->double cast test.

2007-12-15  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mono_method_to_ir): Fix a warning.

2007-12-14  Zoltan Varga  <vargaz@gmail.com>

	* mini-ops.h: Add OP_SWITCH.

	* mini.c graph.c ssa.c aliasing.c mini-<ARCH>.c inssel-<ARCH>.brg: Avoid using
	CEE_SWITCH in back-end code, use OP_SWITCH instead.

2007-12-11  Geoff Norton  <gnorton@novell.com>

	* mini-s390x.c: Minor change to the MAX() define to allow
	it to compile with other gcc versions.

2007-12-11  Geoff Norton  <gnorton@novell.com>

	* cpu-s390x.md:
	* mini-s390x.c: Implement sext_i4 to fix the build on s390x

2007-12-11  Rodrigo Kumpera  <rkumpera@novell.com>

	exceptions-arm.c (mono_arch_get_restore_context): Restore
	the frame pointer.
