@@ -1,3 +1,9 @@
+2007-12-26  Zoltan Varga  <vargaz@gmail.com>
+
+	* mini.c (mini_init): Call mono_gc_base_init () instead of MONO_GC_PRE_INIT ().
+
+	* driver.c (mono_main): Ditto.
+
 2007-12-23  Zoltan Varga  <vargaz@gmail.com>
 
 	* mini-trampolines.c (mono_delegate_trampoline): Use mono_get_delegate_invoke ().
